--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mariadb": "^3.4.0"
+    "mariadb": "^3.4.0",
+    "permit": "^0.2.4"
   }
 }
