--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "server": "node --watch index.js",
+    "server": "node --env-file .env --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mariadb": "^3.4.0"
+    "mariadb": "^3.4.0",
+    "uuid": "^11.0.3"
   }
 }
