Ajustado a microservicio, ajuste a variables de entorno.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "luz.odontologia.backend",
+  "name": "facoluz-back-studcontrol",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
